--- a/pages/good/good.wxml
+++ b/pages/good/good.wxml
@@ -1,26 +1,26 @@
 <!--pages/good/good.wxml-->
 
 <!--商品信息  -->
-<image src="{{good.pic}}" class="good-img" mode="aspectFit"></image>
+<image src="{{good.goods_img}}" class="good-img" mode="aspectFit"></image>
 <view class="good-info">
-  <text class="good-name">{{good.name}}</text>
+  <text class="good-name">{{good.goods_name}}</text>
   <view class="good-detail">
-    <text>规格：{{good.size}}</text>
-    <text>剩余:{{good.num}}</text>
-    <text class="good-price">￥{{good.price}}</text>
+    <text>规格：{{good.goods_spec}}</text>
+    <text>剩余:{{good.goods_number}}</text>
+    <text class="good-price">￥{{good.goods_price}}</text>
     <view class="good-instroduction">
-      {{good.name}}
-      <image src="{{good.pic}}" mode="aspectFit"></image>
+      {{good.goods_name}}
+      <image src="{{good.goods_img}}" mode="aspectFit"></image>
     </view>
   </view>
 </view>
 
 <!--商品推荐  -->
 <view class="good-recommand">
-  <navigator wx:for="{{recommand}}" wx:key="{{index}}" class="recommand-detail">
-    <image src="{{item.pic}}" mode="aspectFit"></image>
-    <text>{{item.name}}</text>
-    <text>￥{{item.price}}</text>
+  <navigator wx:for="{{hot_sell}}" wx:key="{{index}}" class="recommand-detail">
+    <image src="{{item.goods_img}}" mode="aspectFit"></image>
+    <text>{{item.goods_name}}</text>
+    <text>￥{{item.goods_price}}</text>
   </navigator>
 </view>
 
@@ -43,16 +43,16 @@
 <view class="mask" wx:if="{{goods.length !== 0}}" hidden="{{showCar && goods.length !== 0}}" bindtap="closeCar"></view>
 <view class="shop-car" wx:if="{{goods.length !== 0}}" hidden="{{showCar && goods.length !== 0}}">
   <view class="title">我的购物车</view>
-  <view wx:for="{{goods}}" wx:key="{{index}}" class="shop-car-item" wx:if="{{item.num > 0}}">
+  <view wx:for="{{goods}}" wx:key="{{index}}" class="shop-car-item" wx:if="{{item.goods_number > 0}}">
     <view class="item-left">
-      <text>{{item.name}}</text>
-      <text>规格：{{item.size}}</text>
+      <text>{{item.goods_name}}</text>
+      <text>规格：{{item.goods_spec}}</text>
     </view>
-    <view class="item-middle">￥{{item.price}}</view>
+    <view class="item-middle">￥{{item.goods_price}}</view>
     <view class="item-right">
-      <view bindtap="subNum" data-idx="{{item.good_id}}">-</view>
-      <view>{{item.num}}</view>
-      <view bindtap="addNum" data-idx="{{item.good_id}}">+</view>
+      <view bindtap="subNum" data-idx="{{item.id}}">-</view>
+      <view>{{item.goods_number}}</view>
+      <view bindtap="addNum" data-idx="{{item.id}}">+</view>
     </view>
   </view>
 </view>
