--- a/pages/hotel/hotel.wxss
+++ b/pages/hotel/hotel.wxss
@@ -6,7 +6,7 @@ page{
   height: 100%;
 
   /*Visual  */
-  background-color: #f6f8f9;
+  background-color: #f3f5f7;
 }
 
 
@@ -18,7 +18,7 @@ page{
   border-radius: 10rpx;
 
   /*Visual  */
-  background-color: #fff;  
+  background-color: #ffffff;  
 }
 
 /*指南标题  */
@@ -34,7 +34,7 @@ page{
   align-items: center;
 
   /*Visual */
-  color: #808080; 
+  color: #676767; 
 }
 
 
@@ -58,5 +58,5 @@ page{
   /*Typographic */
   font-size: 12pt;
   /*Visual */ 
-  color: #d3d3d3;  
+  color: #929292;  
 }
