--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,7 +6,7 @@ page{
   width: 100%;
 
   /*Visual  */
-  background-color: #f6f8f9;
+  background-color: #f3f5f7;
 }
 
 /*首页标题  */
@@ -18,8 +18,8 @@ page{
   text-align: center;
 
   /*Visual */
-  color: #fff;
-  background-color: #ffd700;
+  color: #ffffff;
+  background-color: #ffbc21;
 }
 
 
@@ -28,11 +28,15 @@ page{
 .ad{
   /*Box model */
   height:50rpx;
-  padding: 10rpx 0;
+  display: flex;
   
   /*Typographic */
-  font-size: 13pt;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 10pt;
   text-align: center;
+  line-height: 50rpx;
 
   /*Visual */
   background-color:#fff9ef;
@@ -41,13 +45,24 @@ page{
 
 /*关闭广告按钮  */
 .ad-icon{
-  /*Positioning  */
-  float: right;
-
   /*Box model  */
-  margin-right: 30rpx;
+  margin: 0 20rpx 0 80rpx;
+  height: 30rpx;
+  width: 30rpx;
+  border: 1px solid #f4a460;
+  border-radius: 50%;
+
+  /*Typographic  */
+  text-align: center;
+  line-height: 30rpx;
 }
 
+/*关闭广告按钮图片  */
+.ad-icon image{
+  /*Box model  */
+  width: 70%;
+  height: 70%;
+}
 
 
 /*功能页导航栏  */
@@ -62,7 +77,7 @@ page{
   justify-content: space-around;
 
   /*Visual */  
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 /*具体功能项  */
@@ -123,7 +138,7 @@ page{
   min-height: 200rpx;
 
   /*Visual  */
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 /*服务分类  */
@@ -152,7 +167,7 @@ page{
   align-items: center;
 
   /*Visual */
-  color: #808080;
+  color: #929292;
 }
 
 /*服务项目图  */
@@ -208,7 +223,7 @@ page{
   
   /*Visual */
   background-color:#ffd700;
-  color:#fff;
+  color:#ffffff;
 }
 
 
@@ -244,7 +259,7 @@ page{
   font-size: 12pt;
   
   /*Visual */
-  color: #a9a9a9;
+  color: #929292;
 }
 
 
@@ -255,7 +270,7 @@ page{
   height:100rpx;
   width:120rpx;
   border-radius:50%;
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
   margin-right: 30rpx;
   
   /*Visual */  
@@ -288,13 +303,14 @@ page{
 /*标签  */
 .tab{
   /*Box model */
-  width:30%;
+  width:28%;
   height:45rpx;
   border:1px #dcdcdc solid;
-  margin: 5rpx;
+  margin: 10rpx;
+  padding: 5rpx;
 
   /*Typographic */
-  font-size:10pt;
+  font-size:8pt;
   line-height:45rpx;
   text-align:center;
 }
@@ -315,7 +331,7 @@ page{
 
   /*Visual */
   background-color: #f5f5f5;
-  color:#a9a9a9;
+  color:#929292;
 }
 
 
@@ -324,7 +340,7 @@ page{
 .submit-btn{
   /*Box model */
   width: 95%;
-  padding:15rpx;
+  padding:25rpx;
   height:20rpx;
   border-radius:40rpx;
   margin: 15rpx 0;
@@ -336,7 +352,7 @@ page{
   
   /*Visual */
   background-color:#ffd700;
-  color:#fff;
+  color:#ffffff;
 }
 
 
@@ -418,7 +434,7 @@ page{
   font-size: 10pt;
   
   /*Visual */  
-  background-color: #fff;
+  background-color: #ffffff;
   color: #808080;
 }
 
@@ -438,6 +454,9 @@ page{
 
   /*Typographic  */
   justify-content: space-around;
+  
+  /*Visual  */
+  color: #929292;
 }
 
 /*热销商品  */
@@ -476,7 +495,7 @@ page{
   border-radius: 10rpx;
 
   /*Visual  */
-  background-color: #fff;  
+  background-color: #ffffff;  
 }
 
 /*通知标题  */
@@ -486,15 +505,43 @@ page{
   border-bottom: 1px #dcdcdc solid;
   display: flex;
   flex-direction: row;
+  
+  /*Typographic */
+  font-size: 12pt;
+  align-items: center;
+  justify-content: space-between;
+  
+  /*Visual */  
+  color: #676767; 
+}
+
+
+
+
+/*固定的通知标题  */
+.notices-title{
+  /*Box model */
+  padding: 20rpx;
+  border-bottom: 1px #dcdcdc solid;
+  display: flex;
+  flex-direction: row;
+  
   /*Typographic */
   font-size: 12pt;
   align-items: center;
   
   /*Visual */  
-  color: #808080; 
+  color: #676767; 
 }
 
+.notice-title-text{
+  /*Box model  */
+  display: flex;
+  flex-direction: row;
 
+  /*Typographic  */
+  align-items: center;
+}
 
 /*标题装饰  */
 .notice-title-line{
@@ -508,20 +555,37 @@ page{
 
 
 
+/*通知时间  */
+.notice-time{
+  /*Typographic  */
+  font-size: 10pt;
+
+  /*Visual  */
+  color: #929292;
+}
+
+
+
 /*通知内容  */
 .notice-text{
   /*Box model  */
-  padding: 30rpx;
+  padding: 20rpx;
   
   /*Typographic  */
   font-size: 12pt;
 
   /*Visual  */
-  color: #d3d3d3;
+  color: #929292;
 }
 
 /*待受理  */
 .notice_status1{
+  /*Box model  */
+  margin-top: 10rpx;
+
+  /*Typographic  */
+  font-size: 10pt;
+
   /*Visual  */
   color: #ff4500;
 }
@@ -531,8 +595,8 @@ page{
 /*待受理图  */
 .notice_status1 image{
   /*Box model  */
-  width:30rpx;
-  height:30rpx;
+  width:25rpx;
+  height:25rpx;
   border-radius:50%;
   
   /*Visual  */
@@ -543,6 +607,12 @@ page{
 
 /*处理中  */
 .notice_status2{
+    /*Box model  */
+  margin-top: 10rpx;
+
+  /*Typographic  */
+  font-size: 10pt;
+
   /*Visual  */  
   color: #0000cd;
 }
@@ -550,8 +620,8 @@ page{
 /*处理中图  */
 .notice_status2 image{
   /*Box model  */
-  width:30rpx;
-  height:30rpx;
+  width:25rpx;
+  height:25rpx;
   border-radius:50%;
   
   /*Visual  */  
@@ -562,6 +632,12 @@ page{
 
 /*已完成  */
 .notice_status3{
+  /*Box model  */
+  margin-top: 10rpx;
+
+  /*Typographic  */
+  font-size: 10pt;
+
   /*Visual  */  
   color: #00ff00;
 }
@@ -569,10 +645,25 @@ page{
 /*已完成图  */
 .notice_status3 image{
   /*Box model  */  
-  width:30rpx;
-  height:30rpx;
+  width:25rpx;
+  height:25rpx;
   border-radius:50%;
 
   /*Visual  */
   background-color:#00ff00;  
+}
+
+/*箭头  */
+.arrow{
+  /*Positioning  */
+  float: right;
+  
+  /*Box model  */
+  width: 15rpx;
+  height: 15rpx;
+  border-top: 2px solid #a9a9a9;
+  border-right: 2px solid #a9a9a9;
+
+  /*Visual  */
+  transform: rotate(45deg);
 }
